Adding header controller for login and register operations

--- a/public/views/partials/header.html
+++ b/public/views/partials/header.html
@@ -1,8 +1,8 @@
 <div class="header" id="home">
-    <div class="container" ng-controller="FrontController">
+    <div>
         <ul>
-            <li> <a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-unlock-alt" aria-hidden="true"></i> Sign In </a></li>
-            <li> <a href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up </a></li>
+            <li> <a href="javascript:void(0)" data-toggle="modal" ng-click="openSignin()"><i class="fa fa-unlock-alt" aria-hidden="true"></i> Sign In </a></li>
+            <li> <a href="javascript:void(0)" data-toggle="modal" ng-click="openSignUp()"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up </a></li>
             <li><i class="fa fa-phone" aria-hidden="true"></i> Call : <span ng-bind="message"></span></li>
             <li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com">info@example.com</a></li>
         </ul>
