--- a/public/views/index.html
+++ b/public/views/index.html
@@ -21,7 +21,7 @@
     </head>
     <body ng-app="craiglist">
         <!-- header -->
-        <div ng-include="'/header.html'"></div>
+        <div ng-include="'/header.html'" ng-controller="HeaderController"></div>
         <!-- //header-bot -->
         <!-- banner -->
         <div class="ban-top">
@@ -144,13 +144,6 @@
         <!-- banner -->
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="3" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="4" class=""></li>
-            </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
                     <div class="container">
@@ -161,51 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item item2">
-                    <div class="container">
-                        <div class="carousel-caption">
-                            <h3>Summer <span>Collection</span></h3>
-                            <p>New Arrivals On Sale</p>
-                            <a class="hvr-outline-out button2" href="mens.html">Shop Now </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item item3">
-                    <div class="container">
-                        <div class="carousel-caption">
-                            <h3>The Biggest <span>Sale</span></h3>
-                            <p>Special for today</p>
-                            <a class="hvr-outline-out button2" href="mens.html">Shop Now </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item item4">
-                    <div class="container">
-                        <div class="carousel-caption">
-                            <h3>Summer <span>Collection</span></h3>
-                            <p>New Arrivals On Sale</p>
-                            <a class="hvr-outline-out button2" href="mens.html">Shop Now </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item item5">
-                    <div class="container">
-                        <div class="carousel-caption">
-                            <h3>The Biggest <span>Sale</span></h3>
-                            <p>Special for today</p>
-                            <a class="hvr-outline-out button2" href="mens.html">Shop Now </a>
-                        </div>
-                    </div>
-                </div>
             </div>
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
             <!-- The Modal -->
         </div>
         <!-- //banner -->
@@ -567,6 +516,7 @@
         <script type="text/javascript" src="assets/js/angular/libraries/angular.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/libraries/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/craiglist.js"></script>
+        <script type="text/javascript" src="assets/js/angular/controllers/HeaderController.js"></script>
         <!-- //js -->
         <script src="assets/js/modernizr.custom.js"></script>
         <!-- Custom-JavaScript-File-Links --> 
