--- a/public/views/index.html
+++ b/public/views/index.html
@@ -515,6 +515,7 @@
         <script type="text/javascript" src="assets/js/jquery-2.1.4.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/libraries/angular.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/libraries/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="assets/js/angular/libraries/ui-bootstrap-tpls.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/craiglist.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HeaderController.js"></script>
         <!-- //js -->
