--- a/public/views/admin/login.html
+++ b/public/views/admin/login.html
@@ -9,6 +9,8 @@
         <title>Gentelella Alela! | </title>
         <!-- Bootstrap -->
         <link href="./../assets/admin/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="./../assets/admin/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="./../assets/admin/animate/animate.min.css" rel="stylesheet">
         <!-- Custom Theme Style -->
         <link href="./../assets/admin/custom.min.css" rel="stylesheet">
     </head>
@@ -19,19 +21,60 @@
             <div class="login_wrapper">
                 <div class="animate form login_form">
                     <section class="login_content">
-                        <form method="POST" action="/admin">
+                        <form>
                             <h1>Login Form</h1>
                             <div>
-                                <input type="text" class="form-control" name="email" placeholder="Email" required="" />
+                                <input type="text" class="form-control" placeholder="Username" required="" />
                             </div>
                             <div>
-                                <input type="password" class="form-control" name="password" placeholder="Password" required="" />
+                                <input type="password" class="form-control" placeholder="Password" required="" />
                             </div>
                             <div>
-                                <button class="btn btn-default submit">Log IN</button>
-                                <a class="reset_pass" href="#">Lost your password?</a>
+                                <a class="btn btn-default submit" href="index.html">LOg In</a>
                             </div>
                             <div class="clearfix"></div>
+                            <div class="separator">
+                                <p class="change_link">New to site?
+                                    <a href="#signup" class="to_register"> Create Account </a>
+                                </p>
+                                <div class="clearfix"></div>
+                                <br />
+                                <div>
+                                    <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
+                                    <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
+                                </div>
+                            </div>
+                        </form>
+                    </section>
+                </div>
+                <div id="register" class="animate form registration_form">
+                    <section class="login_content">
+                        <form>
+                            <h1>Create Account</h1>
+                            <div>
+                                <input type="text" class="form-control" placeholder="Username" required="" />
+                            </div>
+                            <div>
+                                <input type="email" class="form-control" placeholder="Email" required="" />
+                            </div>
+                            <div>
+                                <input type="password" class="form-control" placeholder="Password" required="" />
+                            </div>
+                            <div>
+                                <a class="btn btn-default submit" href="index.html">Register</a>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="separator">
+                                <p class="change_link">Already a member ?
+                                    <a href="#signin" class="to_register"> Log in </a>
+                                </p>
+                                <div class="clearfix"></div>
+                                <br />
+                                <div>
+                                    <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
+                                    <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
+                                </div>
+                            </div>
                         </form>
                     </section>
                 </div>
