--- a/public/views/admin/login.ejs
+++ b/public/views/admin/login.ejs
@@ -18,19 +18,22 @@
         <div>
             <a class="hiddenanchor" id="signup"></a>
             <a class="hiddenanchor" id="signin"></a>
+            <% if (loginMessage.length > 0) { %>
+                <div class="alert alert-danger"><%= loginMessage %></div>
+            <% } %>
             <div class="login_wrapper">
                 <div class="animate form login_form">
                     <section class="login_content">
-                        <form>
+                        <form method="POST" action ="/admin/login">
                             <h1>Login Form</h1>
                             <div>
-                                <input type="text" class="form-control" placeholder="Username" required="" />
+                                <input type="email" name="email" class="form-control" placeholder="Email" required="" />
                             </div>
                             <div>
-                                <input type="password" class="form-control" placeholder="Password" required="" />
+                                <input type="password" name="password" class="form-control" placeholder="Password" required="" />
                             </div>
                             <div>
-                                <a class="btn btn-default submit" href="index.html">LOg In</a>
+                                <button class="btn btn-default submit" type="submit">Log In</button>
                             </div>
                             <div class="clearfix"></div>
                             <div class="separator">
@@ -49,19 +52,19 @@
                 </div>
                 <div id="register" class="animate form registration_form">
                     <section class="login_content">
-                        <form>
+                        <form method="POST" action ="/admin/register">
                             <h1>Create Account</h1>
                             <div>
-                                <input type="text" class="form-control" placeholder="Username" required="" />
+                                <input type="text" name="username" class="form-control" placeholder="Username" required="" />
                             </div>
                             <div>
-                                <input type="email" class="form-control" placeholder="Email" required="" />
+                                <input type="email" name="email" class="form-control" placeholder="Email" required="" />
                             </div>
                             <div>
-                                <input type="password" class="form-control" placeholder="Password" required="" />
+                                <input type="password" name="password" class="form-control" placeholder="Password" required="" />
                             </div>
                             <div>
-                                <a class="btn btn-default submit" href="index.html">Register</a>
+                                <button type="submit" class="btn btn-default submit">Register</button>
                             </div>
                             <div class="clearfix"></div>
                             <div class="separator">
