--- a/public/views/admin/dashboard.ejs
+++ b/public/views/admin/dashboard.ejs
@@ -8,10 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Gentelella Alela! | </title>
         <!-- Bootstrap -->
-        <link href="./../assets/admin/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="./../assets/admin/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-        <!-- Custom Theme Style -->
-        <link href="./../assets/admin/admin.min.css" rel="stylesheet">
+        <% include includes/css %>
     </head>
     <body class="nav-md">
         <div class="container body">
@@ -35,7 +32,7 @@
                         <!-- /menu profile quick info -->
                         <br />
                         <!-- sidebar menu -->
-                        <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+                        <!-- <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                             <div class="menu_section">
                                 <h3>General</h3>
                                 <ul class="nav side-menu">
@@ -53,22 +50,12 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
+                        <% include includes/sidebar %>
                         <!-- /sidebar menu -->
                         <!-- /menu footer buttons -->
                         <div class="sidebar-footer hidden-small">
-                            <a data-toggle="tooltip" data-placement="top" title="Settings">
-                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                            </a>
-                            <a data-toggle="tooltip" data-placement="top" title="FullScreen">
-                            <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-                            </a>
-                            <a data-toggle="tooltip" data-placement="top" title="Lock">
-                            <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
-                            </a>
-                            <a data-toggle="tooltip" data-placement="top" title="Logout">
-                            <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
-                            </a>
+                            <% include includes/footermenu %>
                         </div>
                         <!-- /menu footer buttons -->
                     </div>
@@ -76,94 +63,7 @@
                 <!-- top navigation -->
                 <div class="top_nav">
                     <div class="nav_menu">
-                        <nav>
-                            <div class="nav toggle">
-                                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-                            </div>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li class="">
-                                    <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="./../assets/admin/images/img.jpg" alt="">John Doe
-                                    <span class=" fa fa-angle-down"></span>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-usermenu pull-right">
-                                        <li><a href="javascript:;"> Profile</a></li>
-                                        <li>
-                                            <a href="javascript:;">
-                                            <span class="badge bg-red pull-right">50%</span>
-                                            <span>Settings</span>
-                                            </a>
-                                        </li>
-                                        <li><a href="javascript:;">Help</a></li>
-                                        <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
-                                    </ul>
-                                </li>
-                                <li role="presentation" class="dropdown">
-                                    <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa fa-envelope-o"></i>
-                                    <span class="badge bg-green">6</span>
-                                    </a>
-                                    <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
-                                        <li>
-                                            <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                                            <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                                            Film festivals used to be do-or-die moments for movie makers. They were where...
-                                            </span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                                            <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                                            Film festivals used to be do-or-die moments for movie makers. They were where...
-                                            </span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                                            <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                                            Film festivals used to be do-or-die moments for movie makers. They were where...
-                                            </span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a>
-                                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                                            <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                                            Film festivals used to be do-or-die moments for movie makers. They were where...
-                                            </span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <div class="text-center">
-                                                <a>
-                                                <strong>See All Alerts</strong>
-                                                <i class="fa fa-angle-right"></i>
-                                                </a>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </nav>
+                        <% include includes/topbar %>
                     </div>
                 </div>
                 <!-- /top navigation -->
@@ -279,43 +179,6 @@
             </div>
         </div>
         <!-- jQuery -->
-        <script src="./../assets/admin/vendors/jquery/dist/jquery.min.js"></script>
-        <!-- Bootstrap -->
-        <script src="./../assets/admin/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-        <!-- FastClick -->
-        <script src="./../assets/admin/vendors/fastclick/lib/fastclick.js"></script>
-        <!-- NProgress -->
-        <script src="./../assets/admin/vendors/nprogress/nprogress.js"></script>
-        <!-- Chart.js -->
-        <script src="./../assets/admin/vendors/Chart.js/dist/Chart.min.js"></script>
-        <!-- gauge.js -->
-        <script src="./../assets/admin/vendors/gauge.js/dist/gauge.min.js"></script>
-        <!-- bootstrap-progressbar -->
-        <script src="./../assets/admin/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
-        <!-- iCheck -->
-        <script src="./../assets/admin/vendors/iCheck/icheck.min.js"></script>
-        <!-- Skycons -->
-        <script src="./../assets/admin/vendors/skycons/skycons.js"></script>
-        <!-- Flot -->
-        <script src="./../assets/admin/vendors/Flot/jquery.flot.js"></script>
-        <script src="./../assets/admin/vendors/Flot/jquery.flot.pie.js"></script>
-        <script src="./../assets/admin/vendors/Flot/jquery.flot.time.js"></script>
-        <script src="./../assets/admin/vendors/Flot/jquery.flot.stack.js"></script>
-        <script src="./../assets/admin/vendors/Flot/jquery.flot.resize.js"></script>
-        <!-- Flot plugins -->
-        <script src="./../assets/admin/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-        <script src="./../assets/admin/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
-        <script src="./../assets/admin/vendors/flot.curvedlines/curvedLines.js"></script>
-        <!-- DateJS -->
-        <script src="./../assets/admin/vendors/DateJS/build/date.js"></script>
-        <!-- JQVMap -->
-        <script src="./../assets/admin/vendors/jqvmap/dist/jquery.vmap.js"></script>
-        <script src="./../assets/admin/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-        <script src="./../assets/admin/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
-        <!-- bootstrap-daterangepicker -->
-        <script src="./../assets/admin/vendors/moment/min/moment.min.js"></script>
-        <script src="./../assets/admin/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-        <!-- Custom Theme Scripts -->
-        <script src="./../assets/admin/vendors/admin.min.js"></script>
+        <% include includes/scripts %>
     </body>
 </html>
