--- a/public/views/partials/header.html
+++ b/public/views/partials/header.html
@@ -1,12 +1,12 @@
 <div class="header" id="home">
-    <div>
+   <!-- <div>
         <ul>
             <li> <a href="javascript:void(0)" data-toggle="modal" data-target="#login"><i class="fa fa-unlock-alt" aria-hidden="true"></i> Sign In </a></li>
             <li> <a href="javascript:void(0)" data-toggle="modal" data-target="#register" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up </a></li>
             <li><i class="fa fa-phone" aria-hidden="true"></i> Call : <span ng-bind="message"></span></li>
             <li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com">info@example.com</a></li>
         </ul>
-    </div>
+    </div> -->
 </div>
 <!-- //header -->
 <!-- header-bot -->
@@ -14,45 +14,50 @@
     <div class="header-bot_inner_wthreeinfo_header_mid">
         <div class="col-md-4 header-middle">
             <form action="#" method="post">
-                <input type="search" name="search" placeholder="Search here..." required="">
-                <input type="submit" value=" ">
+                <input type="search" name="search" placeholder="Search here..." required="" style="height: 41px;margin-top: 10px;">
+                <button type="submit" class="btn btn-info" style="width: 30px;height: 30px;border-left-width: 5px;border-bottom-width: 10px;border-top-width: 0px;padding-left: 0px;padding-right: 0px;border-right-width: 0px;"><i class="fa fa-search" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i></button>
+                <!-- <input type="submit" value=" " style="width: 30px;height: 30px;"> -->
                 <div class="clearfix"></div>
             </form>
         </div>
         <!-- header-bot -->
-        <div class="col-md-4 logo_agile">
-            <h1><a href="index.html"><span>E</span>lite Shoppy <i class="fa fa-shopping-bag top_logo_agile_bag" aria-hidden="true"></i></a></h1>
+        <div class="col-md-4 logo_agile" style="left: 22px;">
+            <h1 style="width: 404px;height: 110px;"><a href="index.html"><span>E</span>lite <span>B</span>uy <span>S</span>ell </a></h1>
         </div>
         <!-- header-bot -->
         <div class="col-md-4 agileits-social top_content">
+              <!-- <ul></ul> <p> <button type="button" class="btn btn-info">Log-In</button></p>
+               <p> <button type="button" class="btn btn-info">Sign-Up</button></p>
+        </ul> -->
             <ul class="social-nav model-3d-0 footer-social w3_agile_social">
-                <li class="share">Share On : </li>
+                <!-- <li class="share">Share On : </li> -->
                 <li>
-                    <a href="#" class="facebook">
-                        <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
-                        <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+                    <a href="index.html" class="facebook">
+                        <div class="front"><button type="button" class="btn btn-info"><i class="fa fa-user" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>My Account</button></div>
+                        <div class="back"><button type="button" class="btn btn-info"><i class="fa fa-user" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>My Account</button></div>
                     </a>
                 </li>
-                <li>
+                <li style="margin-left: 90px;">
                     <a href="#" class="twitter">
-                        <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
-                        <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+                        <div class="front"><button type="button" class="btn btn-info"><i class="fa fa-sign-in" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>SignUp</button></div>
+                        <div class="back"><button type="button" class="btn btn-info"><i class="fa fa-sign-in" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>SignUp</button></div>
                     </a>
                 </li>
-                <li>
+                 <li style="margin-left: 60px;">
                     <a href="#" class="instagram">
-                        <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
-                        <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div>
+                        <div class="front"><button type="button" class="btn btn-info"><i class="fa fa-camera" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>Sell Up</button></div>
+                        <div class="back"><button type="button" class="btn btn-info"><i class="fa fa-camera" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>Sell Up</button></i></div>
                     </a>
                 </li>
-                <li>
+                <!--<li>
                     <a href="#" class="pinterest">
                         <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
                         <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
         <div class="clearfix"></div>
     </div>
 </div>
+
