--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -265,7 +265,7 @@ i.fa.fa-shopping-bag.top_logo_agile_bag {
 	letter-spacing:1px;
 }
 .header-middle form input[type="submit"]{
-    background: url(../images/search.png) no-repeat 4px 0px #2fdab8;
+    background: url(../images/search.png) no-repeat 4px 0px #5bc0de;
     width: 11%;
     height: 50px;
     border: none;
@@ -3461,7 +3461,7 @@ p.w3ls_para {
 		font-size: 2em;
 	}
 	.header-middle form input[type="submit"] {
-		background: url(../images/search.png) no-repeat 4px 0px #2fdab8;
+		background: url(../images/search.png) no-repeat 4px 0px #5bc0de;
 		width: 15%;
 	}
 	.header-middle form input[type="search"] {
@@ -3651,12 +3651,13 @@ p.w3ls_para {
 		width: 81%;
 	}
 	.header-middle form input[type="submit"] {
-		background: url(../images/search.png) no-repeat 4px 0px #2fdab8;
+		background: url(../images/search.png) no-repeat 4px 0px #5bc0de;
 		width: 17%;
 	}
 	.w3layouts_mail_grid_left {
 		width: 50%;
 		float: left;
+
 	}
 	.w3layouts_mail_grid_left:nth-child(1),.w3layouts_mail_grid_left:nth-child(2) {
 	  margin-bottom:1em;
@@ -4089,7 +4090,7 @@ p.w3ls_para {
 		font-size: 13px;
 	}
 	.header-middle form input[type="submit"] {
-	    background: url(../images/search.png) no-repeat 19px 0px #2fdab8;
+	    background: url(../images/search.png) no-repeat 19px 0px #5bc0de;
 		width: 9%;
 	}
 	.header-middle form input[type="search"] {
