--- a/public/views/partials/menu.html
+++ b/public/views/partials/menu.html
@@ -1,5 +1,5 @@
 <div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
-  <ul class="nav navbar-nav menu__list">
+  <!-- <ul class="nav navbar-nav menu__list">
 	<li class="active menu__item menu__item--current"><a class="menu__link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
 	<li class=" menu__item"><a class="menu__link" href="about.html">About</a></li>
 	<li class="dropdown menu__item">
@@ -76,5 +76,5 @@
 				</ul>
 	</li>
 	<li class=" menu__item"><a class="menu__link" href="contact.html">Contact</a></li>
-  </ul>
+  </ul> -->
 </div>
