Adding templates for save auctions, removing unnecessary codes

--- a/public/views/admin/includes/css.ejs
+++ b/public/views/admin/includes/css.ejs
@@ -1,3 +1,3 @@
-<link href="./../assets/admin/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="./../assets/admin/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-<link href="./../assets/admin/admin.min.css" rel="stylesheet">
+<link href=<%= base+'/assets/admin/bootstrap/dist/css/bootstrap.min.css'%> rel="stylesheet">
+<link href=<%= base+'/assets/admin/font-awesome/css/font-awesome.min.css'%> rel="stylesheet">
+<link href=<%= base+'/assets/admin/admin.min.css'%> rel="stylesheet">
