--- a/public/views/admin/auctions_add.ejs
+++ b/public/views/admin/auctions_add.ejs
@@ -68,9 +68,6 @@
                                                     </label>
                                                 </div>
                                             </div>
-                                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                                <small><b>Note : </b>A premium auction is available only for premium users. Non-premium auction will be available for all. Only premium users can participate on all auctions. Free users can participate in only free auctions</small>
-                                            </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12">Start Date <span class="required">*</span>
@@ -92,9 +89,15 @@
                                             <div class="col-md-6 col-sm-6 col-xs-12">
                                                 <input class=" form-control col-md-7 col-xs-12" required="required" type="text" name="maximum_products">
                                             </div>
-                                            <div class="col-md-6 col-sm-6 col-xs-12"">
-                                                <small><b>Note : </b>A "Maximum Products" is a numerical limit for products say, if "Maximum Products" is 5, participants can add maximum 5 products to auctions</small>
-                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <small>
+                                                <b>Note: </b>
+                                                <ul>
+                                                    <li>A "Maximum Products" is a numerical limit for products say, if "Maximum Products" is 5, participants can add maximum 5 products to auctions</li>
+                                                    <li>A premium auction is available only for premium users. Non-premium auction will be available for all. Only premium users can participate on all auctions. Free users can participate in only free auctions</li>
+                                                </ul>
+                                            </small>
                                         </div>
                                         <div class="ln_solid"></div>
                                         <div class="form-group">
