--- a/public/views/admin/users.ejs
+++ b/public/views/admin/users.ejs
@@ -78,6 +78,7 @@
                                     </div>
                                 </div>
                                 <div class="clearfix"></div>
+                                <div class="table-responsive">
                                 <% if (users) { %>
                                     <table class="table table-striped jambo_table bulk_action">
                                         <thead>
@@ -100,11 +101,10 @@
                                                     <td><button type="button">Remove</button></td>
                                                 </tr>
                                             <% } %>
-                                            <tr class="even pointer">
-                                            </tr>
                                         </tbody>
                                     </table>
                                 <% } %>
+                                </div>
                             </div>
                         </div>
                     </div>
