--- a/public/views/partials/header.html
+++ b/public/views/partials/header.html
@@ -22,41 +22,9 @@
         </div>
         <!-- header-bot -->
         <div class="col-md-4 logo_agile" style="left: 22px;">
-            <h1 style="width: 404px;height: 110px;"><a href="index.html"><span>E</span>lite <span>B</span>uy <span>S</span>ell </a></h1>
+            <h1 style="width: 404px;height: 110px;"><a href="/"><span>E</span>lite <span>B</span>uy <span>S</span>ell </a></h1>
         </div>
         <!-- header-bot -->
-        <div class="col-md-4 agileits-social top_content">
-              <!-- <ul></ul> <p> <button type="button" class="btn btn-info">Log-In</button></p>
-               <p> <button type="button" class="btn btn-info">Sign-Up</button></p>
-        </ul> -->
-            <ul class="social-nav model-3d-0 footer-social w3_agile_social">
-                <!-- <li class="share">Share On : </li> -->
-                <li>
-                    <a href="index.html" class="facebook">
-                        <div class="front"><button type="button" class="btn btn-info"><i class="fa fa-user" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>My Account</button></div>
-                        <div class="back"><button type="button" class="btn btn-info"><i class="fa fa-user" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>My Account</button></div>
-                    </a>
-                </li>
-                <li style="margin-left: 90px;">
-                    <a href="#" class="twitter">
-                        <div class="front"><button type="button" class="btn btn-info"><i class="fa fa-sign-in-alt" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>SignUp</button></div>
-                        <div class="back"><button type="button" class="btn btn-info"><i class="fa fa-sign-in-alt" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>SignUp</button></div>
-                    </a>
-                </li>
-                 <li style="margin-left: 60px;">
-                    <a href="#" class="instagram">
-                        <div class="front"><button type="button" class="btn btn-info"><i class="fa fa-camera" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>Sell Up</button></div>
-                        <div class="back"><button type="button" class="btn btn-info"><i class="fa fa-camera" aria-hidden="true" style="font-size:20px;padding-right: 5px;"></i>Sell Up</button></i></div>
-                    </a>
-                </li>
-                <!--<li>
-                    <a href="#" class="pinterest">
-                        <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
-                        <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
-                    </a>
-                </li> -->
-            </ul>
-        </div>
         <div class="translating sc-jbKcbu bMtOeh" role="button" data-test="cars" id="9" type="cars" data-reactid="91"><div class="sc-eHgmQL iAnSxx" type="margin" data-reactid="92"><div class="icon" data-reactid="93">
                 <svg class="sc-bwzfXH eZxmlK" viewBox="0 0 24 24" width="24" height="24" data-reactid="94">
             </svg></div></div><div class="label" data-reactid="96"><span data-reactid="97">Cars</span></div></div>
