--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,33 +30,28 @@
                 <div class="top_nav_left">
                     <nav class="navbar navbar-default">
                         <div class="container-fluid">
-                            <!-- Brand and toggle get grouped for better mobile display -->
-                            <div class="navbar-header">
-                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                </button>
+                            <div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav menu__list">
+                                    <li class="active menu__item menu__item" ng-repeat="category in categories">
+                                        <a class="menu__link" href="/category/{{category.slug}}">{{category.title}} <span class="sr-only">(current)</span></a>
+                                    </li>
+                                </ul>
                             </div>
-                            <!-- Collect the nav links, forms, and other content for toggling -->
-                            <div data-ng-include="'/menu.html'"></div>
                         </div>
                     </nav>
                 </div>
                 <div class="top_nav_right">
                     <div class="wthreecartaits wthreecartaits2 cart cart box_1">
-                        <form action="#" method="post" class="last"> 
-                            <input type="hidden" name="cmd" value="_cart">
-                            <input type="hidden" name="display" value="1">
-                            <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-                        </form>
+                        <a class="menu__link" href="/signup">Login/Register <span class="sr-only">(current)</span></a>
                     </div>
                 </div>
                 <div class="clearfix"></div>
             </div>
         </div>
 
+        <!-- //banner -->
+        <div ng-view></div>
+        
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <div class="carousel-inner" role="listbox">
@@ -72,9 +67,6 @@
             </div>
             <!-- The Modal -->
         </div>
-        <!-- //banner -->
-        <div ng-view></div>
-        
                 
         <!-- js -->
         <script type="text/javascript" src="assets/js/jquery-2.1.4.min.js"></script>
@@ -84,22 +76,7 @@
         <script type="text/javascript" src="assets/js/angular/craiglist.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HeaderController.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HomeController.js"></script>
-        <!-- //js -->
-        <script src="assets/js/modernizr.custom.js"></script>
-        <!-- Custom-JavaScript-File-Links --> 
-        <!-- cart-js -->
-        <script src="assets/js/minicart.min.js"></script>
-        <script>
-            // Mini Cart
-            paypal.minicart.render({
-            	action: '#'
-            });
-            
-            if (~window.location.search.indexOf('reset=true')) {
-            	paypal.minicart.reset();
-            }
-        </script>
-        <!-- //cart-js --> 
+
         <!-- script for responsive tabs -->						
         <script src="assets/js/easy-responsive-tabs.js"></script>
         <script>
@@ -125,13 +102,6 @@
             });
         </script>
         <!-- //script for responsive tabs -->		
-        <!-- stats -->
-        <script src="assets/js/jquery.waypoints.min.js"></script>
-        <script src="assets/js/jquery.countup.js"></script>
-        <script>
-            $('.counter').countUp();
-        </script>
-        <!-- //stats -->
         <!-- start-smoth-scrolling -->
         <script type="text/javascript" src="assets/js/move-top.js"></script>
         <script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
@@ -146,18 +116,8 @@
         <!-- here stars scrolling icon -->
         <script type="text/javascript">
             $(document).ready(function() {
-            	/*
-            		var defaults = {
-            		containerID: 'toTop', // fading element id
-            		containerHoverID: 'toTopHover', // fading element hover id
-            		scrollSpeed: 1200,
-            		easingType: 'linear' 
-            		};
-            	*/
-            						
-            	$().UItoTop({ easingType: 'easeOutQuart' });
-            						
-            	});
+                $().UItoTop({ easingType: 'easeOutQuart' });
+            });
         </script>
         <!-- //here ends scrolling icon -->
         <!-- for bootstrap working -->
