--- a/public/views/frontends/products.html
+++ b/public/views/frontends/products.html
@@ -9,6 +9,7 @@
                         <h3><span>{{product.title.substr(0,1)}}</span>{{product.title.substr(1)}}</h3>
                         <h5><span>For {{product.price | currency: $ }}</span></h5>
                         <p>By : {{product.owner.name}}<br>In : {{product.category.title}}</p>
+                        <br><a href="/product/{{product._id}}">View Product</p>
                     </figcaption>                    
                 </figure>
             </div>
