--- a/public/views/index.html
+++ b/public/views/index.html
@@ -75,6 +75,7 @@
         <script type="text/javascript" src="assets/js/angular/libraries/ui-bootstrap-tpls.min.js"></script>
         <script type="text/javascript" src="assets/js/angular/craiglist.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HeaderController.js"></script>
+        <script type="text/javascript" src="assets/js/angular/libraries/services.js"></script>
         <script type="text/javascript" src="assets/js/angular/controllers/HomeController.js"></script>
 
         <!-- script for responsive tabs -->						
