Login service integration

--- a/public/views/frontends/login.html
+++ b/public/views/frontends/login.html
@@ -67,26 +67,26 @@
           
           <div id="login">   
             <h1>Welcome Back!</h1>
-            
-            <form action="/" method="post">
+            <span style="color:red" ng-if="invalid_login == true" ng-bind="error"></span>
+            <form ng-submit="login()" >
             
               <div class="field-wrap">
               <label>
                 Email Address<span class="req">*</span>
               </label>
-              <input type="email"required autocomplete="off"/>
+              <input type="email" ng-model="login_email" required autocomplete="off"/>
             </div>
             
             <div class="field-wrap">
               <label>
                 Password<span class="req">*</span>
               </label>
-              <input type="password"required autocomplete="off"/>
+              <input type="password" ng-model="login_pass" required autocomplete="off"/>
             </div>
             
             <p class="forgot"><a href="#">Forgot Password?</a></p>
             
-            <button class="button button-block">Log In</button>
+            <button class="button button-block" type="submit">Log In</button>
             
             </form>
   
