--- a/public/views/index.html
+++ b/public/views/index.html
@@ -15,6 +15,7 @@
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
         <link href="assets/css/font-awesome.css" rel="stylesheet">
         <link href="assets/css/easy-responsive-tabs.css" rel='stylesheet' type='text/css'/>
+        <link href="assets/css/custom.css" rel='stylesheet' type='text/css'/>
         <!-- //for bootstrap working -->
         <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
         <link href='//fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,900,900italic,700italic' rel='stylesheet' type='text/css'>
@@ -41,10 +42,10 @@
                     </nav>
                 </div>
                 <div class="top_nav_right">
-                    <div class="wthreecartaits wthreecartaits2 cart cart box_1" ng-hide="isloggedin == true">
+                    <div class="wthreecartaits wthreecartaits2 cart cart box_1" ng-show="isloggedin==false">
                         <a class="menu__link" href="/signup">Login/Register <span class="sr-only">(current)</span></a>
                     </div>
-                    <div class="wthreecartaits wthreecartaits2 cart cart box_1" ng-show="isloggedin == true">
+                    <div class="wthreecartaits wthreecartaits2 cart cart box_1" ng-show="isloggedin==true">
                         <li class="menu__item dropdown">
                            <a class="menu__link" href="#" data-toggle="dropdown" aria-expanded="false">Profile <b class="caret"></b></a>
                             <ul class="dropdown-menu agile_short_dropdown">
