Adding container profile page

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -93,12 +93,12 @@
   color: white;
 }
 
-img {
+/*img {
   width: 60px;
   float: left;
   margin: 0 1em 1em 0;
   border-radius: 3px;
-}
+}*/
 
 body {
   font-size: 1em;
