--- a/public/views/frontends/profile.html
+++ b/public/views/frontends/profile.html
@@ -15,7 +15,32 @@
             </ul>
             <div class="contents">
                 <div id="Beyonce" ng-show="activeTab == 'basic'">
-                    Basic Info apears
+                    <div class="col-md-6 contact-form">
+                        <form action="#" method="post">
+                            <div class="styled-input agile-styled-input-top">
+                                <input type="text" ng-model="user.firstname" value="{{user.firstname}}">
+                                <label>Name</label>
+                                <span></span>
+                            </div>
+                            <div class="styled-input">
+                                <input type="email" name="Email"> 
+                                <label>Email</label>
+                                <span></span>
+                            </div> 
+                            <div class="styled-input">
+                                <input type="text" name="Subject">
+                                <label>Subject</label>
+                                <span></span>
+                            </div>
+                            <div class="styled-input">
+                                <textarea name="Message"></textarea>
+                                <label>Message</label>
+                                <span></span>
+                            </div>
+                            <input type="submit" value="SEND">
+                        </form>
+                    </div>
+                    <div class="col-md-6"><img src="{{user.image}}" class="img-responsive"></div>
                 </div>
                 <div id="Fergie" ng-show="activeTab == 'address'">
                     Address appears
