Angulare cinsuming registe webservice

--- a/public/views/frontends/login.html
+++ b/public/views/frontends/login.html
@@ -27,36 +27,43 @@
           <div id="signup">   
             <h1>Sign Up for Free</h1>
             
-            <form action="/" method="post">
+            <form ng-submit="register()">
             
             <div class="top-row">
               <div class="field-wrap">
                 <label>
                   First Name<span class="req">*</span>
                 </label>
-                <input type="text" required autocomplete="off" />
+                <input type="text" ng-model="reg_fname" required autocomplete="off" />
               </div>
           
               <div class="field-wrap">
                 <label>
                   Last Name<span class="req">*</span>
                 </label>
-                <input type="text"required autocomplete="off"/>
+                <input type="text" ng-model="reg_lname" required autocomplete="off"/>
               </div>
+            </div>
+
+            <div class="field-wrap">
+              <label>
+                User Name<span class="req">*</span>
+              </label>
+              <input type="username" ng-model="reg_Uname" required autocomplete="off"/>
             </div>
   
             <div class="field-wrap">
               <label>
                 Email Address<span class="req">*</span>
               </label>
-              <input type="email"required autocomplete="off"/>
+              <input type="email" ng-model="reg_email" required autocomplete="off"/>
             </div>
             
             <div class="field-wrap">
               <label>
                 Set A Password<span class="req">*</span>
               </label>
-              <input type="password"required autocomplete="off"/>
+              <input type="password" ng-model="reg_pass" required autocomplete="off"/>
             </div>
             
             <button type="submit" class="button button-block">Get Started</button>
