--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3477,7 +3477,7 @@ p.w3ls_para {
 	}
 	.logo_agile h1 a {
 		letter-spacing: 1px;
-		font-size: 1.4em;
+		font-size: 45px;
 	}
 	i.fa.fa-shopping-bag.top_logo_agile_bag {
 		position: absolute;
