--- a/public/views/index.html
+++ b/public/views/index.html
@@ -52,6 +52,7 @@
                                 <li><a href="/profile">My Profile</a></li>
                                 <li><a href="/myproducts">My Product</a></li>
                                 <li><a href="/addproduct">Add Product</a></li>
+                                <li><a href="/auction">Auction</a></li>
                                 <li><a href="#" ng-click="logout()">Logout</a></li>
                             </ul>
                         </li>
