--- a/public/views/frontends/addproducts.html
+++ b/public/views/frontends/addproducts.html
@@ -17,12 +17,12 @@
 				</div>
 
 				<div class="wrap-input100 bg1 rs1-wrap-input100">
-					<span class="label-input100">QUANTITY </span>
+					<span class="label-input100">QUANTITY *</span>
 					<input class="input100" type="text" name="quantity" placeholder="Enter Number">
 				</div>
 
-				<!-- <div class="wrap-input100 input100-select bg1">
-					<span class="label-input100">Needed Services *</span>
+				<div class="wrap-input100 input100-select bg1">
+					<span class="label-input100">CATEGORY *</span>
 					<div>
 						<select class="js-select2" name="service">
 							<option>Please chooses</option>
@@ -32,48 +32,8 @@
 						</select>
 						<div class="dropDownSelect2"></div>
 					</div>
-				</div> -->
+				</div> 
 
-				<!-- <div class="w-full dis-none js-show-service">
-					<div class="wrap-contact100-form-radio">
-						<span class="label-input100">What type of products do you sell?</span>
-
-						<div class="contact100-form-radio m-t-15">
-							<input class="input-radio100" id="radio1" type="radio" name="type-product" value="physical" checked="checked">
-							<label class="label-radio100" for="radio1">
-								Phycical Products
-							</label>
-						</div>
-
-						<div class="contact100-form-radio">
-							<input class="input-radio100" id="radio2" type="radio" name="type-product" value="digital">
-							<label class="label-radio100" for="radio2">
-								Digital Products
-							</label>
-						</div>
-
-						<div class="contact100-form-radio">
-							<input class="input-radio100" id="radio3" type="radio" name="type-product" value="service">
-							<label class="label-radio100" for="radio3">
-								Services Consulting
-							</label>
-						</div>
-					</div>
-
-					<div class="wrap-contact100-form-range">
-						<span class="label-input100">Budget *</span>
-
-						<div class="contact100-form-range-value">
-							$<span id="value-lower">610</span> - $<span id="value-upper">980</span>
-							<input type="text" name="from-value">
-							<input type="text" name="to-value">
-						</div>
-
-						<div class="contact100-form-range-bar">
-							<div id="filter-bar"></div>
-						</div>
-					</div>
-				</div> -->
 
 				<div class="wrap-input100 validate-input bg0 rs1-alert-validate" data-validate = "Please Type Your Message">
 					<span class="label-input100">Description</span>
@@ -148,6 +108,8 @@ function imageIsLoaded(e) {
     $('#myImg').attr('src', e.target.result);
 };
 </script>
+
+
 
 <style>
 @font-face {
