--- a/public/views/partials/header.html
+++ b/public/views/partials/header.html
@@ -22,7 +22,7 @@
         </div>
         <!-- header-bot -->
         <div class="col-md-4 logo_agile" style="left: 22px;">
-            <h1 style="width: 404px;height: 110px;"><a href="/"><span>E</span>lite <span>B</span>uy <span>S</span>ell </a></h1>
+            <h1><a id="header1"><span>E</span>lite <span>B</span>uy <span>S</span>ell</a></h1>
         </div>
         <!-- header-bot -->
         <div class="translating sc-jbKcbu bMtOeh" role="button" data-test="cars" id="9" type="cars" data-reactid="91"><div class="sc-eHgmQL iAnSxx" type="margin" data-reactid="92"><div class="icon" data-reactid="93">
@@ -31,4 +31,3 @@
         <div class="clearfix"></div>
     </div>
 </div>
-
