--- a/public/views/frontends/auction.html
+++ b/public/views/frontends/auction.html
@@ -1,88 +1,6 @@
 <div class="banner_bottom_agile_info">
-    <h3 class="wthree_text_info">Add <span>Product</span></h3>
+    <h3 class="wthree_text_info">My <span>Auction</span></h3>
 
-    <div class="container-contact100">
-		<div class="wrap-contact100">
-			<form class="contact100-form validate-form">
-			
-
-				<div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Product Name">
-					<span class="label-input100">TITLE OF THE PRODUCT *</span>
-					<input class="input100" type="text" name="name" placeholder="Enter the Name of the Product">
-				</div>
-
-				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter Your Price">
-					<span class="label-input100">PRICE *</span>
-					<input class="input100" type="text" name="price" placeholder="Enter Your Price ">
-				</div>
-
-				<div class="wrap-input100 bg1 rs1-wrap-input100">
-					<span class="label-input100">QUANTITY *</span>
-					<input class="input100" type="text" name="quantity" placeholder="Enter Number">
-				</div>
-
-				<div class="wrap-input100 input100-select bg1">
-					<span class="label-input100">CATEGORY *</span>
-					<div>
-						<select class="js-select2" name="service">
-							<option>Please chooses</option>
-							<option>eCommerce Bussiness</option>
-							<option>UI/UX Design</option>
-							<option>Online Services</option>
-						</select>
-						<div class="dropDownSelect2"></div>
-					</div>
-				</div> 
-
-
-				<div class="wrap-input100 validate-input bg0 rs1-alert-validate" data-validate = "Please Type Your Message">
-					<span class="label-input100">Description</span>
-					<textarea class="input100" name="description" placeholder="Describe your product here..."></textarea>
-				</div>
-
-                <div class="panel panel-default">
-                        <div class="panel-heading"><strong>Upload files</strong> <small> </small></div>
-                        <div class="panel-body">
-                            <div class="input-group image-preview">
-                                <input placeholder="" type="text" class="form-control image-preview-filename" disabled="disabled">
-                                <!-- don't give a name === doesn't send on POST/GET --> 
-                                <span class="input-group-btn"> 
-                                <!-- image-preview-clear button -->
-                                <button type="button" class="btn btn-default image-preview-clear" style="display:none;"> <span class="glyphicon glyphicon-remove"></span> Clear </button>
-                                <!-- image-preview-input -->
-                                <div class="btn btn-default image-preview-input"> <span class="glyphicon glyphicon-folder-open"></span> <span class="image-preview-input-title">Browse</span>
-                                    <input type="file" accept="image/png, image/jpeg, image/gif" name="input-file-preview"/>
-                                    <!-- rename it --> 
-                                </div>
-                                <button type="button" id="cancel" class="btn btn-labeled btn-primary"> <span class="btn-label"><i class="glyphicon glyphicon-remove-circle"></i> </span>Cancel</button>
-                                </span> </div>
-                            <!-- /input-group image-preview [TO HERE]--> 
-                            
-                            <br />
-
-                            <img id="myImg" class="upload-drop-zone" src="#" alt="Image File Upload here" />
-                            
-                            <!-- Drop Zone
-                            <div class="upload-drop-zone" id="drop-zone"> Or drag and drop files here </div>
-                            <br /> -->
-                            
-                        </div>
-                    </div>
-
-
-
-
-				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
-						<span>
-							Submit
-							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
-						</span>
-					</button>
-				</div>
-			</form>
-		</div>
-	</div>
 
 
 
